# idao2022-online-round

./: .gitignore  README.md  eda.ipynb  ensemble.ipynb  environment.yaml  exp0.py  exp1.py  exp10.py  exp11.py  exp12.py  exp12a.py  exp13.py  exp14.py  exp15.py  exp16.py  exp16a.py  exp16b.py  exp17.py  exp18.py  exp19.py  exp19a.py  exp19b.py  exp19c.py  exp19d.py  exp19e.py  exp19f.py  exp19g.py  exp19h.py  exp2.py  exp20.py  exp21.py  exp22.py  exp23.py  exp24.py  exp24a.py  exp24b.py  exp24c.py  exp24d.py  exp24e.py  exp24f.py  (+13 more)
megnet_models/: __init__.py  base.py  callbacks.py  megnet.py
results/exp_0/: summary.csv
results/exp_1/: summary.csv
results/exp_10/: summary.csv
results/exp_11/: summary.csv
results/exp_12/: stack_submission.csv  submission_raw.csv  summary.csv
results/exp_13/: submission_raw.csv  summary.csv
results/exp_16/: submission_raw.csv  summary.csv
results/exp_16_a/: submission_fold4.csv  submission_raw.csv  summary.csv
results/exp_19/: results.csv
results/exp_19_a/: results.csv
results/exp_19_b/: results.csv
results/exp_19_c/: results.csv
results/exp_19_d/: results.csv  stack_submission.csv
results/exp_19_e/: results.csv
results/exp_19_f/: results.csv
results/exp_19_g/: results.csv
results/exp_19_h/: results.csv
results/exp_2/: summary.csv
results/exp_20/: results.csv
results/exp_21/: results.csv
results/exp_22/: results.csv
results/exp_23/: results.csv
results/exp_24/: results.csv
results/exp_24_a/: results.csv
results/exp_24_b/: results.csv
track2/: Makefile  inference.py  train.sh
(+14 files in other folders)
