[tool.poetry]
name = "IDAO"
version = "0.1.0"
description = ""
authors = ["Abdalaziz Rashid <abdalaziz.rashid@outlook.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
pandas = "1.3.0"
pymatgen = "^2022.0.16"
ase = "^3.22.1"
tqdm = "^4.62.3"
megnet = {version = "^1.2.9", extras = ["tensorflow with gpu"]}
sklearn = "^0.0"
tensorflow = "^2.7.0"
tensorflow-gpu = "^2.7.0"
catboost = "^1.0.4"
numpy = "^1.22.1"
optuna = "^2.10.0"
lightgbm = "^3.3.2"
xgboost = "^1.5.2"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
dvc = {extras = ["azure"], version = "^2.8.3"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
